// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Footer Default / Tall 1`] = `
Array [
  <div
    className="storybook-container"
    data-floating-menu-container=""
    role="main"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <footer
          className="bx--footer"
        >
          <section
            className="bx--footer__main"
          >
            <div
              class="bx--footer__main-container"
            >
              <h1
                className="bx--footer-title"
              >
                <a
                  className="bx--footer-title__link"
                  href="https://www.ibm.com/"
                >
                  <svg
                    class="bx--footer-title__logo"
                    viewBox="0 0 157 65"
                  >
                    <path
                      d="M30.4436498,60.2076728 L30.4436498,64.2376746 L-2.91322522e-13,64.2376746 L-2.91322522e-13,60.2076728 L30.4436498,60.2076728 Z M108.735358,60.2067171 L108.735358,64.2376746 L86.9826603,64.2376746 L86.9826603,60.2067171 L108.735358,60.2067171 Z M156.592795,60.2067171 L156.592795,64.2376746 L134.840096,64.2376746 L134.840096,60.2067171 L156.592795,60.2067171 Z M123.176704,60.2067171 L121.779475,64.2376746 L120.398188,60.2067171 L123.176704,60.2067171 Z M34.7933454,60.2078639 L77.5682441,60.2078639 C74.7705526,62.6327259 71.1773563,64.1319583 67.2410591,64.2324704 L66.8180207,64.2378657 L34.7933454,64.2378657 L34.7933454,60.2078639 L77.5682441,60.2078639 Z M30.4436498,51.7462936 L30.4436498,55.7762954 L-2.91322522e-13,55.7762954 L-2.91322522e-13,51.7462936 L30.4436498,51.7462936 Z M82.8448933,51.7469625 C82.5134031,52.9954078 82.0440654,54.1860508 81.4563549,55.3022459 L81.1972884,55.7760087 L34.7933454,55.7760087 L34.7933454,51.7469625 L82.8448933,51.7469625 Z M156.592795,51.742471 L156.592795,55.7734284 L134.840096,55.7734284 L134.840096,51.742471 L156.592795,51.742471 Z M108.735358,51.742471 L108.735358,55.7734284 L86.9826603,55.7734284 L86.9826603,51.742471 L108.735358,51.742471 Z M126.109666,51.7420887 L124.712437,55.7730462 L118.86283,55.7730462 L117.466539,51.7420887 L126.109666,51.7420887 Z M21.7451962,43.2849144 L21.7451962,47.3149162 L8.69751584,47.3149162 L8.69751584,43.2849144 L21.7451962,43.2849144 Z M82.940355,43.2851055 C83.2119472,44.4164829 83.378718,45.588834 83.4161671,46.7957568 L83.4242276,47.3151073 L68.7955217,47.3151073 L68.7955217,43.2851055 L82.940355,43.2851055 Z M56.5390105,43.2849144 L56.5390105,47.3149162 L43.4913301,47.3149162 L43.4913301,43.2849144 L56.5390105,43.2849144 Z M129.041034,43.2784159 L127.644742,47.3084177 L115.930525,47.3084177 L114.534234,43.2784159 L129.041034,43.2784159 Z M147.891528,43.2782248 L147.891528,47.3082266 L134.840096,47.3082266 L134.840096,43.2782248 L147.891528,43.2782248 Z M108.735358,43.2782248 L108.735358,47.3082266 L95.6839271,47.3082266 L95.6839271,43.2782248 L108.735358,43.2782248 Z M21.7451962,34.8235352 L21.7451962,38.853537 L8.69751584,38.853537 L8.69751584,34.8235352 L21.7451962,34.8235352 Z M77.8615684,34.8232485 C78.9907919,35.873419 79.9779764,37.0776317 80.7882576,38.4059297 L81.0517515,38.8532503 L43.4916115,38.8532503 L43.4916115,34.8232485 L77.8615684,34.8232485 Z M108.735358,34.8139786 L108.735358,38.8449361 L95.6839271,38.8449361 L95.6839271,34.8139786 L108.735358,34.8139786 Z M147.891528,34.8139786 L147.891528,38.8449361 L134.840096,38.8449361 L134.840096,34.8139786 L147.891528,34.8139786 Z M131.973433,34.8136919 L130.577142,38.8446494 L112.998313,38.8446494 L111.602022,34.8136919 L131.973433,34.8136919 Z M81.1948503,26.3623471 C80.4234674,27.7178498 79.472067,28.9518216 78.3755133,30.0356991 L78.0046671,30.3913933 L43.4912364,30.3913933 L43.4912364,26.3623471 L81.1948503,26.3623471 Z M21.7451962,26.362156 L21.7451962,30.3912022 L8.69751584,30.3912022 L8.69751584,26.362156 L21.7451962,26.362156 Z M147.891528,26.3490635 L147.891528,30.380021 L134.840096,30.380021 L134.839345,26.5412738 L133.509447,30.380021 L122.054045,30.380021 L123.426893,26.3490635 L147.891528,26.3490635 Z M120.148562,26.3492547 L121.52141,30.3802121 L110.06507,30.3802121 L108.735358,26.5413415 L108.735358,30.3802121 L95.6839271,30.3802121 L95.6839271,26.3492547 L120.148562,26.3492547 Z M21.7451962,17.9007768 L21.7451962,21.9307786 L8.69751584,21.9307786 L8.69751584,17.9007768 L21.7451962,17.9007768 Z M83.4242276,17.900299 C83.4242276,19.1161325 83.2914058,20.2997723 83.0502626,21.4428957 L82.940355,21.9303008 L68.7955217,21.9303008 L68.7955217,17.900299 L83.4242276,17.900299 Z M56.5390105,17.8998212 L56.5390105,21.929823 L43.4913301,21.929823 L43.4913301,17.8998212 L56.5390105,17.8998212 Z M147.891434,17.8846262 L147.891434,21.9155837 L124.936556,21.9155837 L126.307529,17.8846262 L147.891434,17.8846262 Z M117.266988,17.8844351 L118.638898,21.9153926 L95.6840208,21.9153926 L95.6840208,17.8844351 L117.266988,17.8844351 Z M30.4436498,9.43844199 L30.4436498,13.4684438 L-2.91322522e-13,13.4684438 L-2.91322522e-13,9.43844199 L30.4436498,9.43844199 Z M81.197476,9.43844199 C81.8186099,10.5338628 82.324153,11.7053777 82.6946307,12.9369814 L82.8450809,13.4684438 L34.793533,13.4684438 L34.793533,9.43844199 L81.197476,9.43844199 Z M156.593451,9.41971113 L156.593451,13.4506686 L127.817099,13.4506686 L129.189946,9.41971113 L156.593451,9.41971113 Z M114.385696,9.41999783 L115.757606,13.4509553 L86.9821914,13.4509553 L86.9821914,9.41999783 L114.385696,9.41999783 Z M30.4436498,0.978018462 L30.4436498,5.00706462 L-2.91322522e-13,5.00706462 L-2.91322522e-13,0.978018462 L30.4436498,0.978018462 Z M66.818302,0.977540633 C70.7785294,0.977540633 74.4118131,2.3931571 77.2657493,4.75043913 L77.5685254,5.00658679 L34.7936268,5.00658679 L34.7936268,0.977540633 L66.818302,0.977540633 Z M156.592607,0.956229502 L156.592607,4.98718697 L130.69886,4.98718697 L132.07077,0.956229502 L156.592607,0.956229502 Z M111.495495,0.955273846 L112.867405,4.98527566 L86.9820976,4.98527566 L86.9820976,0.955273846 L111.495495,0.955273846 Z"
                    />
                  </svg>
                </a>
              </h1>
              <nav
                className="bx--footer-nav"
              >
                <ul
                  className="bx--footer-nav__list bx--footer-nav__list--desktop"
                >
                  <li
                    className="bx--footer-nav__list-item"
                  >
                    <div
                      className="bx--footer-nav-group"
                    >
                      <h2
                        className="bx--footer-nav-group__title"
                      >
                        Discover
                      </h2>
                      <ul>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/products?lnk=fdi"
                          >
                            Marketplace
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.redbooks.ibm.com/?lnk=fdi"
                          >
                            Redbooks
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/services?lnk=fdi"
                          >
                            Services
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/industries?lnk=fdi"
                          >
                            Industries
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://research.ibm.com/?lnk=fdi"
                          >
                            IBM Research
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/case-studies?lnk=fdi"
                          >
                            Case studies
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/demos/?lnk=fdi"
                          >
                            Demos
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/financing?ref=ibmfooter&lnk=fdi"
                          >
                            Financing
                          </a>
                        </li>
                      </ul>
                    </div>
                  </li>
                  <li
                    className="bx--footer-nav__list-item"
                  >
                    <div
                      className="bx--footer-nav-group"
                    >
                      <h2
                        className="bx--footer-nav-group__title"
                      >
                        Information for...
                      </h2>
                      <ul>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/developerworks/?lnk=fif"
                          >
                            Developers
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www-356.ibm.com/partnerworld/wps/servlet/ContentHandler/partnerworld-home?lnk=fif"
                          >
                            Business Partners
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/industries/sled-contracts?lnk=fif"
                          >
                            Federal and state contracts
                          </a>
                        </li>
                      </ul>
                    </div>
                  </li>
                  <li
                    className="bx--footer-nav__list-item"
                  >
                    <div
                      className="bx--footer-nav-group"
                    >
                      <h2
                        className="bx--footer-nav-group__title"
                      >
                        Connect with us
                      </h2>
                      <ul>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://support.ibm.com?lnk=fcw"
                          >
                            Support
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/partnerworld/wps/bplocator/search.jsp?lnk=fcw"
                          >
                            Find a Business Partner
                          </a>
                        </li>
                      </ul>
                    </div>
                  </li>
                  <li
                    className="bx--footer-nav__list-item"
                  >
                    <div
                      className="bx--footer-nav-group"
                    >
                      <h2
                        className="bx--footer-nav-group__title"
                      >
                        About IBM
                      </h2>
                      <ul>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/employment/?lnk=fab"
                          >
                            Careers
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/events?lnk=fab"
                          >
                            Events
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://newsroom.ibm.com/?lnk=fab"
                          >
                            Latest news
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/investor/?lnk=fab"
                          >
                            Investor relations
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/employment/us/diverse/?lnk=fab"
                          >
                            Diversity and inclusion
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.org/?lnk=fab"
                          >
                            Corporate responsibility
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/ibm/us/en/?lnk=fab"
                          >
                            About IBM
                          </a>
                        </li>
                      </ul>
                    </div>
                  </li>
                  <li
                    className="bx--footer-nav__list-item"
                  >
                    <div
                      className="bx--footer-nav-group"
                    >
                      <h2
                        className="bx--footer-nav-group__title"
                      >
                        Social
                      </h2>
                      <ul>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.twitter.com/ibm"
                          >
                            Twitter
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.linkedin.com/company/ibm"
                          >
                            LinkedIn
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.facebook.com/ibm"
                          >
                            Facebook
                          </a>
                        </li>
                        <li
                          className="bx--footer-nav-group__link"
                        >
                          <a
                            className="bx--link"
                            href="https://www.youtube.com/ibm"
                          >
                            YouTube
                          </a>
                        </li>
                      </ul>
                    </div>
                  </li>
                </ul>
                <ul
                  className="bx--accordion bx--footer-nav__list bx--footer-nav__list--mobile"
                  style={
                    Object {
                      "maxWidth": "100%",
                    }
                  }
                >
                  <li
                    className="bx--accordion__item"
                  >
                    <button
                      aria-expanded={false}
                      className="bx--accordion__heading"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      title="Expand/Collapse"
                      type="button"
                    >
                      <svg
                        aria-label="Expand/Collapse"
                        className="bx--accordion__arrow"
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        style={
                          Object {
                            "willChange": "transform",
                          }
                        }
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"
                        />
                      </svg>
                      <div
                        className="bx--accordion__title"
                      >
                        Discover
                      </div>
                    </button>
                    <div
                      className="bx--accordion__content"
                    >
                      <ul>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/products?lnk=fdi"
                          >
                            Marketplace
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.redbooks.ibm.com/?lnk=fdi"
                          >
                            Redbooks
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/services?lnk=fdi"
                          >
                            Services
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/industries?lnk=fdi"
                          >
                            Industries
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://research.ibm.com/?lnk=fdi"
                          >
                            IBM Research
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/case-studies?lnk=fdi"
                          >
                            Case studies
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/demos/?lnk=fdi"
                          >
                            Demos
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/financing?ref=ibmfooter&lnk=fdi"
                          >
                            Financing
                          </a>
                        </li>
                      </ul>
                    </div>
                  </li>
                  <li
                    className="bx--accordion__item"
                  >
                    <button
                      aria-expanded={false}
                      className="bx--accordion__heading"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      title="Expand/Collapse"
                      type="button"
                    >
                      <svg
                        aria-label="Expand/Collapse"
                        className="bx--accordion__arrow"
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        style={
                          Object {
                            "willChange": "transform",
                          }
                        }
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"
                        />
                      </svg>
                      <div
                        className="bx--accordion__title"
                      >
                        Information for...
                      </div>
                    </button>
                    <div
                      className="bx--accordion__content"
                    >
                      <ul>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/developerworks/?lnk=fif"
                          >
                            Developers
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www-356.ibm.com/partnerworld/wps/servlet/ContentHandler/partnerworld-home?lnk=fif"
                          >
                            Business Partners
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/industries/sled-contracts?lnk=fif"
                          >
                            Federal and state contracts
                          </a>
                        </li>
                      </ul>
                    </div>
                  </li>
                  <li
                    className="bx--accordion__item"
                  >
                    <button
                      aria-expanded={false}
                      className="bx--accordion__heading"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      title="Expand/Collapse"
                      type="button"
                    >
                      <svg
                        aria-label="Expand/Collapse"
                        className="bx--accordion__arrow"
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        style={
                          Object {
                            "willChange": "transform",
                          }
                        }
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"
                        />
                      </svg>
                      <div
                        className="bx--accordion__title"
                      >
                        Connect with us
                      </div>
                    </button>
                    <div
                      className="bx--accordion__content"
                    >
                      <ul>
                        <li>
                          <a
                            className="bx--link"
                            href="https://support.ibm.com?lnk=fcw"
                          >
                            Support
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/partnerworld/wps/bplocator/search.jsp?lnk=fcw"
                          >
                            Find a Business Partner
                          </a>
                        </li>
                      </ul>
                    </div>
                  </li>
                  <li
                    className="bx--accordion__item"
                  >
                    <button
                      aria-expanded={false}
                      className="bx--accordion__heading"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      title="Expand/Collapse"
                      type="button"
                    >
                      <svg
                        aria-label="Expand/Collapse"
                        className="bx--accordion__arrow"
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        style={
                          Object {
                            "willChange": "transform",
                          }
                        }
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"
                        />
                      </svg>
                      <div
                        className="bx--accordion__title"
                      >
                        About IBM
                      </div>
                    </button>
                    <div
                      className="bx--accordion__content"
                    >
                      <ul>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/employment/?lnk=fab"
                          >
                            Careers
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/events?lnk=fab"
                          >
                            Events
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://newsroom.ibm.com/?lnk=fab"
                          >
                            Latest news
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/investor/?lnk=fab"
                          >
                            Investor relations
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/employment/us/diverse/?lnk=fab"
                          >
                            Diversity and inclusion
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.org/?lnk=fab"
                          >
                            Corporate responsibility
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.ibm.com/ibm/us/en/?lnk=fab"
                          >
                            About IBM
                          </a>
                        </li>
                      </ul>
                    </div>
                  </li>
                  <li
                    className="bx--accordion__item"
                  >
                    <button
                      aria-expanded={false}
                      className="bx--accordion__heading"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      title="Expand/Collapse"
                      type="button"
                    >
                      <svg
                        aria-label="Expand/Collapse"
                        className="bx--accordion__arrow"
                        focusable="false"
                        height={16}
                        preserveAspectRatio="xMidYMid meet"
                        role="img"
                        style={
                          Object {
                            "willChange": "transform",
                          }
                        }
                        viewBox="0 0 16 16"
                        width={16}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11 8l-5 5-.7-.7L9.6 8 5.3 3.7 6 3z"
                        />
                      </svg>
                      <div
                        className="bx--accordion__title"
                      >
                        Social
                      </div>
                    </button>
                    <div
                      className="bx--accordion__content"
                    >
                      <ul>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.twitter.com/ibm"
                          >
                            Twitter
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.linkedin.com/company/ibm"
                          >
                            LinkedIn
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.facebook.com/ibm"
                          >
                            Facebook
                          </a>
                        </li>
                        <li>
                          <a
                            className="bx--link"
                            href="https://www.youtube.com/ibm"
                          >
                            YouTube
                          </a>
                        </li>
                      </ul>
                    </div>
                  </li>
                </ul>
              </nav>
            </div>
          </section>
          <aside
            className="bx--legal-nav__container"
          >
            <nav
              className="bx--legal-nav"
            >
              <ul
                className="bx--legal-nav__list"
              >
                <li
                  className="bx--legal-nav__list-item"
                >
                  <a
                    className="bx--link"
                    href="https://www.ibm.com/contact/us/en/?lnk=flg-cont-usen"
                  >
                    Contact IBM
                  </a>
                </li>
                <li
                  className="bx--legal-nav__list-item"
                >
                  <a
                    className="bx--link"
                    href="https://www.ibm.com/privacy/us/en/?lnk=flg-priv-usen"
                  >
                    Privacy
                  </a>
                </li>
                <li
                  className="bx--legal-nav__list-item"
                >
                  <a
                    className="bx--link"
                    href="https://www.ibm.com/us-en/legal?lnk=flg-tous-usen"
                  >
                    Terms of use
                  </a>
                </li>
                <li
                  className="bx--legal-nav__list-item"
                >
                  <a
                    className="bx--link"
                    href="https://www.ibm.com/accessibility/us/en/?lnk=flg-acce-usen"
                  >
                    Accessibility
                  </a>
                </li>
              </ul>
            </nav>
          </aside>
        </footer>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        className="info__overlay"
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          className="info__close-button"
          onClick={[Function]}
          style={
            Object {
              "background": "#027ac5",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div>
          <div
            style={
              Object {
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "color": "black",
                "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                Footer
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                Default / Tall
              </h2>
            </div>
            
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#fafafa",
                    "display": "flex",
                    "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                    "fontSize": ".88em",
                    "justifyContent": "space-between",
                    "lineHeight": 1.5,
                    "overflowX": "scroll",
                    "padding": ".5rem",
                  }
                }
              >
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      &lt;
                      Footer
                    </span>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </div>
                <button
                  onClick={[Function]}
                  style={
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "rgb(255, 255, 255)",
                      "borderColor": "rgb(238, 238, 238)",
                      "borderImage": "initial",
                      "borderRadius": "3px",
                      "borderStyle": "solid",
                      "borderWidth": "1px",
                      "cursor": "pointer",
                      "flexShrink": "0",
                      "fontSize": "13px",
                      "overflow": "hidden",
                      "padding": "3px 10px",
                    }
                  }
                  type="button"
                >
                  Copy
                </button>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h3
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  Footer
                  " Component
                </h3>
                <table
                  className="info-table"
                >
                  <thead>
                    <tr>
                      <th>
                        property
                      </th>
                      <th>
                        propType
                      </th>
                      <th>
                        required
                      </th>
                      <th>
                        default
                      </th>
                      <th>
                        description
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        className="info-table-monospace"
                      >
                        type
                      </td>
                      <td
                        className="info-table-monospace"
                      >
                        <span>
                          string
                        </span>
                      </td>
                      <td
                        className={null}
                      >
                        -
                      </td>
                      <td
                        className={null}
                      >
                        -
                      </td>
                      <td
                        className={null}
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <input
    aria-label="input-text-offleft"
    className="bx--visually-hidden"
    type="text"
  />,
]
`;

exports[`Storyshots Footer Short 1`] = `
Array [
  <div
    className="storybook-container"
    data-floating-menu-container=""
    role="main"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <footer
          className="bx--footer bx--footer--short"
        >
          <section
            className="bx--footer__main"
          >
            <div
              class="bx--footer__main-container"
            >
              <h1
                className="bx--footer-title"
              >
                <a
                  className="bx--footer-title__link"
                  href="https://www.ibm.com/"
                >
                  <svg
                    class="bx--footer-title__logo"
                    viewBox="0 0 157 65"
                  >
                    <path
                      d="M30.4436498,60.2076728 L30.4436498,64.2376746 L-2.91322522e-13,64.2376746 L-2.91322522e-13,60.2076728 L30.4436498,60.2076728 Z M108.735358,60.2067171 L108.735358,64.2376746 L86.9826603,64.2376746 L86.9826603,60.2067171 L108.735358,60.2067171 Z M156.592795,60.2067171 L156.592795,64.2376746 L134.840096,64.2376746 L134.840096,60.2067171 L156.592795,60.2067171 Z M123.176704,60.2067171 L121.779475,64.2376746 L120.398188,60.2067171 L123.176704,60.2067171 Z M34.7933454,60.2078639 L77.5682441,60.2078639 C74.7705526,62.6327259 71.1773563,64.1319583 67.2410591,64.2324704 L66.8180207,64.2378657 L34.7933454,64.2378657 L34.7933454,60.2078639 L77.5682441,60.2078639 Z M30.4436498,51.7462936 L30.4436498,55.7762954 L-2.91322522e-13,55.7762954 L-2.91322522e-13,51.7462936 L30.4436498,51.7462936 Z M82.8448933,51.7469625 C82.5134031,52.9954078 82.0440654,54.1860508 81.4563549,55.3022459 L81.1972884,55.7760087 L34.7933454,55.7760087 L34.7933454,51.7469625 L82.8448933,51.7469625 Z M156.592795,51.742471 L156.592795,55.7734284 L134.840096,55.7734284 L134.840096,51.742471 L156.592795,51.742471 Z M108.735358,51.742471 L108.735358,55.7734284 L86.9826603,55.7734284 L86.9826603,51.742471 L108.735358,51.742471 Z M126.109666,51.7420887 L124.712437,55.7730462 L118.86283,55.7730462 L117.466539,51.7420887 L126.109666,51.7420887 Z M21.7451962,43.2849144 L21.7451962,47.3149162 L8.69751584,47.3149162 L8.69751584,43.2849144 L21.7451962,43.2849144 Z M82.940355,43.2851055 C83.2119472,44.4164829 83.378718,45.588834 83.4161671,46.7957568 L83.4242276,47.3151073 L68.7955217,47.3151073 L68.7955217,43.2851055 L82.940355,43.2851055 Z M56.5390105,43.2849144 L56.5390105,47.3149162 L43.4913301,47.3149162 L43.4913301,43.2849144 L56.5390105,43.2849144 Z M129.041034,43.2784159 L127.644742,47.3084177 L115.930525,47.3084177 L114.534234,43.2784159 L129.041034,43.2784159 Z M147.891528,43.2782248 L147.891528,47.3082266 L134.840096,47.3082266 L134.840096,43.2782248 L147.891528,43.2782248 Z M108.735358,43.2782248 L108.735358,47.3082266 L95.6839271,47.3082266 L95.6839271,43.2782248 L108.735358,43.2782248 Z M21.7451962,34.8235352 L21.7451962,38.853537 L8.69751584,38.853537 L8.69751584,34.8235352 L21.7451962,34.8235352 Z M77.8615684,34.8232485 C78.9907919,35.873419 79.9779764,37.0776317 80.7882576,38.4059297 L81.0517515,38.8532503 L43.4916115,38.8532503 L43.4916115,34.8232485 L77.8615684,34.8232485 Z M108.735358,34.8139786 L108.735358,38.8449361 L95.6839271,38.8449361 L95.6839271,34.8139786 L108.735358,34.8139786 Z M147.891528,34.8139786 L147.891528,38.8449361 L134.840096,38.8449361 L134.840096,34.8139786 L147.891528,34.8139786 Z M131.973433,34.8136919 L130.577142,38.8446494 L112.998313,38.8446494 L111.602022,34.8136919 L131.973433,34.8136919 Z M81.1948503,26.3623471 C80.4234674,27.7178498 79.472067,28.9518216 78.3755133,30.0356991 L78.0046671,30.3913933 L43.4912364,30.3913933 L43.4912364,26.3623471 L81.1948503,26.3623471 Z M21.7451962,26.362156 L21.7451962,30.3912022 L8.69751584,30.3912022 L8.69751584,26.362156 L21.7451962,26.362156 Z M147.891528,26.3490635 L147.891528,30.380021 L134.840096,30.380021 L134.839345,26.5412738 L133.509447,30.380021 L122.054045,30.380021 L123.426893,26.3490635 L147.891528,26.3490635 Z M120.148562,26.3492547 L121.52141,30.3802121 L110.06507,30.3802121 L108.735358,26.5413415 L108.735358,30.3802121 L95.6839271,30.3802121 L95.6839271,26.3492547 L120.148562,26.3492547 Z M21.7451962,17.9007768 L21.7451962,21.9307786 L8.69751584,21.9307786 L8.69751584,17.9007768 L21.7451962,17.9007768 Z M83.4242276,17.900299 C83.4242276,19.1161325 83.2914058,20.2997723 83.0502626,21.4428957 L82.940355,21.9303008 L68.7955217,21.9303008 L68.7955217,17.900299 L83.4242276,17.900299 Z M56.5390105,17.8998212 L56.5390105,21.929823 L43.4913301,21.929823 L43.4913301,17.8998212 L56.5390105,17.8998212 Z M147.891434,17.8846262 L147.891434,21.9155837 L124.936556,21.9155837 L126.307529,17.8846262 L147.891434,17.8846262 Z M117.266988,17.8844351 L118.638898,21.9153926 L95.6840208,21.9153926 L95.6840208,17.8844351 L117.266988,17.8844351 Z M30.4436498,9.43844199 L30.4436498,13.4684438 L-2.91322522e-13,13.4684438 L-2.91322522e-13,9.43844199 L30.4436498,9.43844199 Z M81.197476,9.43844199 C81.8186099,10.5338628 82.324153,11.7053777 82.6946307,12.9369814 L82.8450809,13.4684438 L34.793533,13.4684438 L34.793533,9.43844199 L81.197476,9.43844199 Z M156.593451,9.41971113 L156.593451,13.4506686 L127.817099,13.4506686 L129.189946,9.41971113 L156.593451,9.41971113 Z M114.385696,9.41999783 L115.757606,13.4509553 L86.9821914,13.4509553 L86.9821914,9.41999783 L114.385696,9.41999783 Z M30.4436498,0.978018462 L30.4436498,5.00706462 L-2.91322522e-13,5.00706462 L-2.91322522e-13,0.978018462 L30.4436498,0.978018462 Z M66.818302,0.977540633 C70.7785294,0.977540633 74.4118131,2.3931571 77.2657493,4.75043913 L77.5685254,5.00658679 L34.7936268,5.00658679 L34.7936268,0.977540633 L66.818302,0.977540633 Z M156.592607,0.956229502 L156.592607,4.98718697 L130.69886,4.98718697 L132.07077,0.956229502 L156.592607,0.956229502 Z M111.495495,0.955273846 L112.867405,4.98527566 L86.9820976,4.98527566 L86.9820976,0.955273846 L111.495495,0.955273846 Z"
                    />
                  </svg>
                </a>
              </h1>
            </div>
          </section>
          <aside
            className="bx--legal-nav__container"
          >
            <nav
              className="bx--legal-nav"
            >
              <ul
                className="bx--legal-nav__list"
              >
                <li
                  className="bx--legal-nav__list-item"
                >
                  <a
                    className="bx--link"
                    href="https://www.ibm.com/contact/us/en/?lnk=flg-cont-usen"
                  >
                    Contact IBM
                  </a>
                </li>
                <li
                  className="bx--legal-nav__list-item"
                >
                  <a
                    className="bx--link"
                    href="https://www.ibm.com/privacy/us/en/?lnk=flg-priv-usen"
                  >
                    Privacy
                  </a>
                </li>
                <li
                  className="bx--legal-nav__list-item"
                >
                  <a
                    className="bx--link"
                    href="https://www.ibm.com/us-en/legal?lnk=flg-tous-usen"
                  >
                    Terms of use
                  </a>
                </li>
                <li
                  className="bx--legal-nav__list-item"
                >
                  <a
                    className="bx--link"
                    href="https://www.ibm.com/accessibility/us/en/?lnk=flg-acce-usen"
                  >
                    Accessibility
                  </a>
                </li>
              </ul>
            </nav>
          </aside>
        </footer>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        className="info__overlay"
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          className="info__close-button"
          onClick={[Function]}
          style={
            Object {
              "background": "#027ac5",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div>
          <div
            style={
              Object {
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "color": "black",
                "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                Footer
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                Short
              </h2>
            </div>
            
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#fafafa",
                    "display": "flex",
                    "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                    "fontSize": ".88em",
                    "justifyContent": "space-between",
                    "lineHeight": 1.5,
                    "overflowX": "scroll",
                    "padding": ".5rem",
                  }
                }
              >
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      &lt;
                      Footer
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          type
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            "
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              short
                            </span>
                            "
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#444",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </div>
                <button
                  onClick={[Function]}
                  style={
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "rgb(255, 255, 255)",
                      "borderColor": "rgb(238, 238, 238)",
                      "borderImage": "initial",
                      "borderRadius": "3px",
                      "borderStyle": "solid",
                      "borderWidth": "1px",
                      "cursor": "pointer",
                      "flexShrink": "0",
                      "fontSize": "13px",
                      "overflow": "hidden",
                      "padding": "3px 10px",
                    }
                  }
                  type="button"
                >
                  Copy
                </button>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h3
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  Footer
                  " Component
                </h3>
                <table
                  className="info-table"
                >
                  <thead>
                    <tr>
                      <th>
                        property
                      </th>
                      <th>
                        propType
                      </th>
                      <th>
                        required
                      </th>
                      <th>
                        default
                      </th>
                      <th>
                        description
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        className="info-table-monospace"
                      >
                        type
                      </td>
                      <td
                        className="info-table-monospace"
                      >
                        <span>
                          string
                        </span>
                      </td>
                      <td
                        className={null}
                      >
                        -
                      </td>
                      <td
                        className={null}
                      >
                        -
                      </td>
                      <td
                        className={null}
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <input
    aria-label="input-text-offleft"
    className="bx--visually-hidden"
    type="text"
  />,
]
`;

exports[`Storyshots Masthead: Test Default 1`] = `
Array [
  <div
    className="storybook-container"
    data-floating-menu-container=""
    role="main"
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="storybook-center-container"
        >
          <div
            className="masthead"
          >
            <div
              data-autoid="masthead__search"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="react-autowhatever-1"
                className="react-autosuggest__container"
                role="combobox"
              >
                <div>
                  <input
                    aria-activedescendant={null}
                    aria-autocomplete="list"
                    aria-controls="react-autowhatever-1"
                    autoComplete="off"
                    className="react-autosuggest__input"
                    data-autoid="masthead__search--input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder=""
                    type="text"
                    value=""
                  />
                  <button
                    onClick={[Function]}
                    type="button"
                  />
                </div>
                <div
                  className="react-autosuggest__suggestions-container"
                  id="react-autowhatever-1"
                  role="listbox"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
      <div
        className="info__overlay"
        style={
          Object {
            "background": "white",
            "bottom": 0,
            "display": "none",
            "left": 0,
            "overflow": "auto",
            "padding": "0 40px",
            "position": "fixed",
            "right": 0,
            "top": 0,
            "zIndex": 99999,
          }
        }
      >
        <button
          className="info__close-button"
          onClick={[Function]}
          style={
            Object {
              "background": "#027ac5",
              "border": "none",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "top": 0,
            }
          }
          type="button"
        >
          ×
        </button>
        <div>
          <div
            style={
              Object {
                "backgroundColor": "#fff",
                "border": "1px solid #eee",
                "borderRadius": "2px",
                "color": "black",
                "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
                "fontSize": "15px",
                "fontWeight": 300,
                "lineHeight": 1.45,
                "marginBottom": "20px",
                "marginTop": "20px",
                "padding": "20px 40px 40px",
              }
            }
          >
            <div
              style={
                Object {
                  "borderBottom": "1px solid #eee",
                  "marginBottom": 10,
                  "paddingTop": 10,
                }
              }
            >
              <h1
                style={
                  Object {
                    "fontSize": "35px",
                    "margin": 0,
                    "padding": 0,
                  }
                }
              >
                Masthead: Test
              </h1>
              <h2
                style={
                  Object {
                    "fontSize": "22px",
                    "fontWeight": 400,
                    "margin": "0 0 10px 0",
                    "padding": 0,
                  }
                }
              >
                Default
              </h2>
            </div>
            
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Story Source
              </h1>
              <pre
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#fafafa",
                    "display": "flex",
                    "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                    "fontSize": ".88em",
                    "justifyContent": "space-between",
                    "lineHeight": 1.5,
                    "overflowX": "scroll",
                    "padding": ".5rem",
                  }
                }
              >
                <div>
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        &lt;
                        div
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            className
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                storybook-center-container
                              </span>
                              "
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        &lt;
                        Masthead
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                branded
                              </span>
                              "
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#444",
                          }
                        }
                      >
                        &lt;/
                        div
                        &gt;
                      </span>
                    </div>
                  </div>
                </div>
                <button
                  onClick={[Function]}
                  style={
                    Object {
                      "alignSelf": "flex-start",
                      "backgroundColor": "rgb(255, 255, 255)",
                      "borderColor": "rgb(238, 238, 238)",
                      "borderImage": "initial",
                      "borderRadius": "3px",
                      "borderStyle": "solid",
                      "borderWidth": "1px",
                      "cursor": "pointer",
                      "flexShrink": "0",
                      "fontSize": "13px",
                      "overflow": "hidden",
                      "padding": "3px 10px",
                    }
                  }
                  type="button"
                >
                  Copy
                </button>
              </pre>
            </div>
            <div>
              <h1
                style={
                  Object {
                    "borderBottom": "1px solid #EEE",
                    "fontSize": "25px",
                    "margin": "20px 0 0 0",
                    "padding": "0 0 5px 0",
                  }
                }
              >
                Prop Types
              </h1>
              <div>
                <h3
                  style={
                    Object {
                      "margin": "20px 0 0 0",
                    }
                  }
                >
                  "
                  Masthead
                  " Component
                </h3>
                <table
                  className="info-table"
                >
                  <thead>
                    <tr>
                      <th>
                        property
                      </th>
                      <th>
                        propType
                      </th>
                      <th>
                        required
                      </th>
                      <th>
                        default
                      </th>
                      <th>
                        description
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td
                        className="info-table-monospace"
                      >
                        type
                      </td>
                      <td
                        className="info-table-monospace"
                      >
                        <span>
                          string
                        </span>
                      </td>
                      <td
                        className={null}
                      >
                        -
                      </td>
                      <td
                        className={null}
                      >
                        -
                      </td>
                      <td
                        className={null}
                      />
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <input
    aria-label="input-text-offleft"
    className="bx--visually-hidden"
    type="text"
  />,
]
`;
